Revert "Merge remote-tracking branch 'upstream/dev/3.0.0' into dev/3.0.0"
This reverts commit c64ee02033c15819dd7cf91c6353c4fe0d476a9a, reversing
changes made to a93eb31fa4051b06ba29076d7cf327bba1e8e7c5.