@@ -62,7 +62,6 @@ import net.kyori.adventure.text.event.HoverEvent;
 import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextColor;
 import net.kyori.adventure.text.format.TextDecoration;
-import net.kyori.adventure.text.minimessage.translation.Argument;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -166,9 +165,9 @@ public final class VelocityCommand {
           .build();
       final Component copyright = Component
           .translatable("velocity.command.version-copyright",
-              Argument.string("vendor", version.getVendor()),
-                  Argument.string("name", version.getName()),
-                  Argument.component("year", Component.text(LocalDate.now().getYear())));
+              Component.text(version.getVendor()),
+                  Component.text(version.getName()),
+                  Component.text(LocalDate.now().getYear()));
       source.sendMessage(velocity);
       source.sendMessage(copyright);
 
@@ -221,7 +220,7 @@ public final class VelocityCommand {
       final TranslatableComponent output = Component.translatable()
           .key("velocity.command.plugins-list")
           .color(NamedTextColor.YELLOW)
-          .arguments(Argument.component("plugins", listBuilder.build()))
+          .arguments(listBuilder.build())
           .build();
       source.sendMessage(output);
       return Command.SINGLE_SUCCESS;
@@ -237,17 +236,17 @@ public final class VelocityCommand {
         hoverText.append(Component.newline());
         hoverText.append(Component.translatable(
             "velocity.command.plugin-tooltip-website",
-            Argument.component("url", Component.text(url))));
+            Component.text(url)));
       });
       if (!description.getAuthors().isEmpty()) {
         hoverText.append(Component.newline());
         if (description.getAuthors().size() == 1) {
           hoverText.append(Component.translatable("velocity.command.plugin-tooltip-author",
-              Component.text(description.getAuthors().getFirst())));
+              Component.text(description.getAuthors().get(0))));
         } else {
           hoverText.append(
               Component.translatable("velocity.command.plugin-tooltip-author",
-                  Argument.string("authors", String.join(", ", description.getAuthors()))
+                  Component.text(String.join(", ", description.getAuthors()))
               )
           );
         }
