@@ -69,25 +69,33 @@ public class LegacyPlayerListItemPacket implements MinecraftPacket {
         Item item = new Item(ProtocolUtils.readUuid(buf));
         items.add(item);
         switch (action) {
-          case ADD_PLAYER -> {
+          case ADD_PLAYER:
             item.setName(ProtocolUtils.readString(buf));
             item.setProperties(ProtocolUtils.readProperties(buf));
             item.setGameMode(ProtocolUtils.readVarInt(buf));
             item.setLatency(ProtocolUtils.readVarInt(buf));
             item.setDisplayName(readOptionalComponent(buf, version));
+
             if (version.noLessThan(ProtocolVersion.MINECRAFT_1_19)) {
-                if (buf.readBoolean()) {
-                    item.setPlayerKey(ProtocolUtils.readPlayerKey(version, buf));
-                }
+              if (buf.readBoolean()) {
+                item.setPlayerKey(ProtocolUtils.readPlayerKey(version, buf));
+              }
             }
-          }
-          case UPDATE_GAMEMODE -> item.setGameMode(ProtocolUtils.readVarInt(buf));
-          case UPDATE_LATENCY -> item.setLatency(ProtocolUtils.readVarInt(buf));
-          case UPDATE_DISPLAY_NAME -> item.setDisplayName(readOptionalComponent(buf, version));
-          case REMOVE_PLAYER -> {
-              //Do nothing, all that is needed is the uuid
-          }
-          default -> throw new UnsupportedOperationException("Unknown action " + action);
+            break;
+          case UPDATE_GAMEMODE:
+            item.setGameMode(ProtocolUtils.readVarInt(buf));
+            break;
+          case UPDATE_LATENCY:
+            item.setLatency(ProtocolUtils.readVarInt(buf));
+            break;
+          case UPDATE_DISPLAY_NAME:
+            item.setDisplayName(readOptionalComponent(buf, version));
+            break;
+          case REMOVE_PLAYER:
+            //Do nothing, all that is needed is the uuid
+            break;
+          default:
+            throw new UnsupportedOperationException("Unknown action " + action);
         }
       }
     } else {
@@ -118,32 +126,39 @@ public class LegacyPlayerListItemPacket implements MinecraftPacket {
 
         ProtocolUtils.writeUuid(buf, uuid);
         switch (action) {
-          case ADD_PLAYER -> {
+          case ADD_PLAYER:
             ProtocolUtils.writeString(buf, item.getName());
             ProtocolUtils.writeProperties(buf, item.getProperties());
             ProtocolUtils.writeVarInt(buf, item.getGameMode());
             ProtocolUtils.writeVarInt(buf, item.getLatency());
             writeDisplayName(buf, item.getDisplayName(), version);
             if (version.noLessThan(ProtocolVersion.MINECRAFT_1_19)) {
-                if (item.getPlayerKey() != null) {
-                    buf.writeBoolean(true);
-                    ProtocolUtils.writePlayerKey(buf, item.getPlayerKey());
-                } else {
-                    buf.writeBoolean(false);
-                }
+              if (item.getPlayerKey() != null) {
+                buf.writeBoolean(true);
+                ProtocolUtils.writePlayerKey(buf, item.getPlayerKey());
+              } else {
+                buf.writeBoolean(false);
+              }
             }
-          }
-          case UPDATE_GAMEMODE -> ProtocolUtils.writeVarInt(buf, item.getGameMode());
-          case UPDATE_LATENCY -> ProtocolUtils.writeVarInt(buf, item.getLatency());
-          case UPDATE_DISPLAY_NAME -> writeDisplayName(buf, item.getDisplayName(), version);
-          case REMOVE_PLAYER -> {
+            break;
+          case UPDATE_GAMEMODE:
+            ProtocolUtils.writeVarInt(buf, item.getGameMode());
+            break;
+          case UPDATE_LATENCY:
+            ProtocolUtils.writeVarInt(buf, item.getLatency());
+            break;
+          case UPDATE_DISPLAY_NAME:
+            writeDisplayName(buf, item.getDisplayName(), version);
+            break;
+          case REMOVE_PLAYER:
             // Do nothing, all that is needed is the uuid
-          }
-          default -> throw new UnsupportedOperationException("Unknown action " + action);
+            break;
+          default:
+            throw new UnsupportedOperationException("Unknown action " + action);
         }
       }
     } else {
-      Item item = items.getFirst();
+      Item item = items.get(0);
       Component displayNameComponent = item.getDisplayName();
       if (displayNameComponent != null) {
         String displayName = LegacyComponentSerializer.legacySection()
@@ -254,7 +269,7 @@ public class LegacyPlayerListItemPacket implements MinecraftPacket {
       return this;
     }
 
-    public @Nullable IdentifiedKey getPlayerKey() {
+    public IdentifiedKey getPlayerKey() {
       return playerKey;
     }
   }
